 Summary of important user-visible changes for dicom 0.3.0+ (TBD):
-------------------------------------------------------------------------

 ** bugfix dicomdisp, dicominfo for empty SQ sequences

 Summary of important user-visible changes for dicom 0.3.0 (2020/02/27):
-------------------------------------------------------------------------

 ** update fallback gdcm detection for gdcm 3.0

 ** dicomwrite updated to set image properties from the input info structure.

 ** added dicomdisp

 ** added user manual

 Summary of important user-visible changes for dicom 0.2.2 (2019/01/03):
-------------------------------------------------------------------------

 ** added checks for 5.0 depreciated functions, using config.h 

 ** updated sources to remove compiler warnings

 Summary of important user-visible changes for dicom 0.2.1 (2018/04/02):
-------------------------------------------------------------------------

 ** added checks for depreciated functions, using config.h 

 ** added fallback gdcm detection in cmake fails

 Summary of important user-visible changes for dicom 0.2.0 (2017/02/20):
-------------------------------------------------------------------------

 ** Updated install to detect gdcm library using cmake

 ** install source tests as part of package

 ** dicominfo updated to support sequences of unknown length

 ** moved isdicom to own .oct file

 ** updated function documentation 

 ** added dicomuid function 

 Summary of important user-visible changes for dicom 0.1.1 (2011/11):
-------------------------------------------------------------------------

 ** The function isdicom has been completely rewritten and will perform
    much faster for invalid dicom files.  It also no longer accepts a cell
    array of strings since it reduces its usefulness by other functions.
    Such use can be replaced with:

      cellfun (@isdicom, cell_array_filenames)

 ** The dicom package no longer autoloads by default.  Please load the