@@ -1,5 +1,6 @@
 dicom >> Dicom file I/O for medical images and other data
 Dicom Functions
+  dicomanon
   dicomdict
   dicomdisp
   dicominfo
